# cmake_cpp_ref

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Gtest.cmake  boost.cmake  cccl.cmake  eigen.cmake  matplotcpp.cmake
header/: header.cuh  header.hpp  test_header.hpp
src/: CMakeLists.txt  main.cpp
src/main/: CMakeLists.txt  main.cpp  main.cu
tests/: CMakeLists.txt
tests/basictests/: CMakeLists.txt  maintest.cpp
